--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preload" href="./public/images/team.jpg" as="image">
-    <link rel="preload" href="./public/images/team_desk.jpg" as="image">
+    <!-- <link rel="preload" href="./images/team.jpg" as="image">
+    <link rel="preload" href="./images/team_desk.jpg" as="image"> -->
     <title>Yash Rawat</title>
   </head>
   <body>
